Reduce PMD violations (no suppressions) (#641)
* fix(json): wrap rule.apply() in try-catch RuntimeException in JsonNavigateCommand (#624)

* fix(test): resolve SpotBugs warnings in contract tests

- guard path.getParent() null check in CommandStreamingContractProviders.writeString()
- close BlockingProbeInputStream and SignalingOutputStream via try-with-resources
  in CommandStreamingContractTest.verifyCommandStreamingContract()

* fix(json): address review feedback on JsonNavigateCommand

- remove raw character data from rule-failure IOException message to
  prevent large-value memory/exposure issues; path context is preserved
- add test: rule RuntimeException is wrapped as IOException with the
  original RuntimeException as direct cause
- remove ignoreFailures = true from spotbugsMain and spotbugsTest so
  SpotBugs violations fail the build and prevent silent regressions

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* fix(test): enlarge ValidateCommand sample input to prevent Windows CI timeout

The ValidateCommandStreamingContractProvider used valid-test.xml (136 bytes)
as sampleInput. On Windows the JDK XML parser reads this tiny input in a
single read() call, so BlockingProbeInputStream's last-byte block stalls the
TeeInputStream write before FIRST_WRITE_TIMEOUT (1 s) expires.

Switch to an inline 12 KB+ XML payload so the parser issues multiple read()
calls, ensuring the first TeeInputStream write occurs within the timeout on
all platforms including Windows.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Improve Gradle output and tune PMD rules

* Reduce PMD violations

* Reduce PMD violations in csv/json

* style(core): reduce PMD violations

* build: relax noisy pmd rules

* build: disable low-value pmd rules

* build: disable context-heavy pmd rules

* build: disable low-signal declaration rule

* build: document pmd rule exclusions

* build: disable noisy varargs rule

* build: disable noisy loop allocation rule

* refactor: si