@@ -62,7 +62,6 @@ public class CsvValidateCommand extends ConsumerCommand {
    */
   private CsvValidateCommand(
       final boolean hasHeader, final int maxErrorsToReport, final String... requiredColumns) {
-    super();
     this.hasHeader = hasHeader;
     this.maxErrorsToReport = Math.max(1, maxErrorsToReport);
 
@@ -146,6 +145,7 @@ public class CsvValidateCommand extends ConsumerCommand {
       int rowNum = 1;
       boolean hasDataRows = false;
 
+      // Consume CSV records until the parser reports EOF.
       while ((row = csvReader.readNext()) != null) {
         hasDataRows = true;
         validateDataRow(row, rowNum++, headers, validationErrors);
@@ -166,9 +166,7 @@ public class CsvValidateCommand extends ConsumerCommand {
     } catch (CsvValidationException e) {
       LOGGER.error("CSV parsing error: {}", e.getMessage(), e);
       throw new StreamProcessingException("Failed to parse CSV: " + e.getMessage(), e);
-    } catch (StreamProcessingException e) {
-      throw e;
-    } catch (Exception e) {
+    } catch (IOException e) {
       LOGGER.error("CSV validation failed: {}", e.getMessage(), e);
       throw new StreamProcessingException("Failed to parse CSV: " + e.getMessage(), e);
     }
@@ -186,7 +184,7 @@ public class CsvValidateCommand extends ConsumerCommand {
     Set<String> duplicates = new HashSet<>();
 
     for (String header : headers) {
-      if (header == null || header.trim().isEmpty()) {
+      if (header == null || header.isBlank()) {
         errors.add("Header contains empty or null column");
         continue;
       }
@@ -243,7 +241,7 @@ public class CsvValidateCommand extends ConsumerCommand {
     // 空行チェック
     boolean isEmptyRow = true;
     for (String cell : row) {
-      if (cell != null && !cell.trim().isEmpty()) {
+      if (cell != null && !cell.isBlank()) {
         isEmptyRow = false;
         break;
       }
